# Project.VIATECH.ECIDS.Core

./: .gitignore  CMakeLists.txt  README.md
config/: api1_config.json  api2_config.json  api3_config.json  default.json  postprocess_config.json  preprocess_config.json
include/ecids_core/api1/: DataSubscriber.h  StereoCameraClient.h
include/ecids_core/api2/: AIAdminClient.h  DetectionDealer.h
include/ecids_core/api3/: ClientServer.h  DataPublisher.h  WSSServer.h
include/ecids_core/common/: Logger.h  Response.h  Timestamp.h  Types.h
include/ecids_core/data/: ConfigManager.h  DataBuffer.h  ImageEncoder.h  StatusTracker.h
include/ecids_core/database/: DatabaseManager.h  DatabaseWriter.h  HouseKeeper.h  RecordManager.h
include/ecids_core/logic/: ModeController.h  TaskManager.h
include/ecids_core/postprocess/: CleatClassifier.h  DetectionExtractor.h  DisparityCalculator.h  EdgeFitter.h  GapDistance.h  GapLocalizer.h  PostprocessModule.h  RegionLocalizer.h  SameGapChecker.h
include/ecids_core/preprocess/: ImagePackager.h  PreprocessModule.h
scripts/: start.sh
src/: main.cpp
src/api1/: DataSubscriber.cpp  StereoCameraClient.cpp
src/api2/: AIAdminClient.cpp  DetectionDealer.cpp
src/api3/: ClientServer.cpp  DataPublisher.cpp  WSSServer.cpp
src/common/: Logger.cpp  Response.cpp  Timestamp.cpp
src/data/: ConfigManager.cpp  DataBuffer.cpp  ImageEncoder.cpp  StatusTracker.cpp
src/database/: DatabaseManager.cpp  DatabaseWriter.cpp  HouseKeeper.cpp  RecordManager.cpp
src/logic/: ModeController.cpp  TaskManager.cpp
src/postprocess/: CleatClassifier.cpp  DetectionExtractor.cpp  DisparityCalculator.cpp  EdgeFitter.cpp  GapDistance.cpp  GapLocalizer.cpp  PostprocessModule.cpp  RegionLocalizer.cpp  SameGapChecker.cpp
src/preprocess/: ImagePackager.cpp  PreprocessModule.cpp
tests/: test_config_manager.cpp
